Add data to sql

--- a/WebAPI.Data/App.config
+++ b/WebAPI.Data/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <clear />
-    <add name="GroceryStoreConnection" connectionString="data source=BLACKHAT\SQLEXPRESS;initial catalog=Web_API_Shop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /> />
+    <add name="GroceryStoreConnection"  connectionString="Data Source=BLACKHAT\SQLEXPRESS;Initial Catalog=GroceryStore;integrated security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <configSections>
 
@@ -12,6 +12,11 @@
       requirePermission="false" />
   </configSections>
   <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
