--- a/WebAPI.UnitTest/WebAPI.UnitTest.csproj
+++ b/WebAPI.UnitTest/WebAPI.UnitTest.csproj
@@ -100,7 +100,9 @@
       <Name>WebAPI.Web</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="ReadMe.txt" />
+  </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
