--- a/WebAPI.Service/WebAPI.Service.csproj
+++ b/WebAPI.Service/WebAPI.Service.csproj
@@ -59,5 +59,8 @@
       <Name>WebAPI.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ReadMe.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
