--- a/WebAPI.Data/WebAPI.Data.csproj
+++ b/WebAPI.Data/WebAPI.Data.csproj
@@ -59,12 +59,13 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
-    <Compile Include="Migrations\202012240229342_InitialDB.cs" />
-    <Compile Include="Migrations\202012240229342_InitialDB.designer.cs">
-      <DependentUpon>202012240229342_InitialDB.cs</DependentUpon>
+    <Compile Include="Migrations\202012281300400_InitialDB.cs" />
+    <Compile Include="Migrations\202012281300400_InitialDB.designer.cs">
+      <DependentUpon>202012281300400_InitialDB.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
@@ -103,8 +104,8 @@
     <Content Include="Infrastructure\Tổng Quan của thư mục INfrastructure.txt" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202012240229342_InitialDB.resx">
-      <DependentUpon>202012240229342_InitialDB.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202012281300400_InitialDB.resx">
+      <DependentUpon>202012281300400_InitialDB.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
