--- a/WebAPI.Web/packages.config
+++ b/WebAPI.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac" version="4.5.0" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="4.0.0" targetFramework="net45" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net45" />
   <package id="jQuery" version="3.3.1" targetFramework="net45" />
@@ -26,5 +27,6 @@
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
