thêm mới vào database

--- a/WebAPI.Data/WebAPI.Data.csproj
+++ b/WebAPI.Data/WebAPI.Data.csproj
@@ -40,6 +40,12 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -62,6 +68,14 @@
     <Compile Include="Migrations\202012281300400_InitialDB.cs" />
     <Compile Include="Migrations\202012281300400_InitialDB.designer.cs">
       <DependentUpon>202012281300400_InitialDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202012301418574_Intergrate-AspnetIdentity.cs" />
+    <Compile Include="Migrations\202012301418574_Intergrate-AspnetIdentity.designer.cs">
+      <DependentUpon>202012301418574_Intergrate-AspnetIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202012310326430_Changkey.cs" />
+    <Compile Include="Migrations\202012310326430_Changkey.designer.cs">
+      <DependentUpon>202012310326430_Changkey.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -106,6 +120,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202012281300400_InitialDB.resx">
       <DependentUpon>202012281300400_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012301418574_Intergrate-AspnetIdentity.resx">
+      <DependentUpon>202012301418574_Intergrate-AspnetIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012310326430_Changkey.resx">
+      <DependentUpon>202012310326430_Changkey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
