--- a/WebAPI.Web/WebAPI.Web.csproj
+++ b/WebAPI.Web/WebAPI.Web.csproj
@@ -200,6 +200,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Core\ApiControllerBase.cs" />
+    <Compile Include="Infrastructure\Core\PaginationSet.cs" />
     <Compile Include="Infrastructure\Extensions\EntityExtensions.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
     <Compile Include="Models\PostCategoryViewModel.cs" />
@@ -227,6 +228,7 @@
     <Content Include="app\components\product_categories\producteCategoryListController.js" />
     <Content Include="app\components\ReadMe.txt" />
     <Content Include="app\Readme.txt" />
+    <Content Include="app\shared\filters\statusFilter.js" />
     <Content Include="app\shared\modules\grocery.common.js" />
     <Content Include="app\shared\services\apiService.js" />
     <Content Include="Assets\admin\css\adminlte.css" />
