--- a/WebAPI.Web/bower.json
+++ b/WebAPI.Web/bower.json
@@ -6,6 +6,7 @@
     "angular": "1.8.2",
     "angular-ui-router": "~1.0.29",
     "jQuery": "~3.5.1",
-    "bootstrap": "~4.5.3"
+    "bootstrap": "~4.5.3",
+    "toastr": "~2.1.3"
   }
 }
