--- a/WebAPI.Web/bower.json
+++ b/WebAPI.Web/bower.json
@@ -7,6 +7,8 @@
     "angular-ui-router": "~1.0.29",
     "jQuery": "~3.5.1",
     "bootstrap": "~4.5.3",
-    "toastr": "~2.1.3"
+    "toastr": "~2.1.3",
+    "bootbox": "~5.5.2",
+    "ngBootbox": "~0.2.0"
   }
 }
